Fix footer links on mobile

--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -26,7 +26,11 @@
 
     a {
         font-size: 1.125rem;
-        padding: 1.5rem;
+        padding: 1rem;
+
+        @include media-breakpoint-up(lg) {
+            padding: 1.5rem;
+        }
     }
 }
 
@@ -35,9 +39,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-
-    li {
-    }
 
     a,
     img {
